--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,8 @@ spring.security.user.password=admin123
 # Configuration pour l'initialisation automatique de la base de données
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
+
+# Security
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
