--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,12 @@ spring.sql.init.schema-locations=classpath:schema.sql
 server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=never
+
+# Logging détaillé
+logging.level.com.greta.ecommerce=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.http=DEBUG
+logging.level.root=DEBUG
+
